概要の修正

--- a/spec/paths/test_phases_{test_phase[id]}_test_suite_assignments_{test_suite_assignments[id]}_test_cycles_{test_cycle[id]}_test_results_bulk_upsert.yml
+++ b/spec/paths/test_phases_{test_phase[id]}_test_suite_assignments_{test_suite_assignments[id]}_test_cycles_{test_cycle[id]}_test_results_bulk_upsert.yml
@@ -2,7 +2,7 @@ post:
   operationId: PostMultiTestResults
   tags:
     - TestResult
-  summary: 複数テスト結果の入力・上書き
+  summary: 複数テスト結果入力・上書き
   description: |
     任意のテストサイクルにテスト結果を入力します。<br>
     すでに結果がある項目に対しては上書きを行います。<br>
