--- a/spec/paths/auto_test_suites.yml
+++ b/spec/paths/auto_test_suites.yml
@@ -13,5 +13,33 @@ post:
   responses:
     '201':
       $ref: ../components/responses/NoResponse.yml
+    '400':
+      $ref: ../components/responses/badRequest.yml
     '422':
       $ref: ../components/responses/postFailAutoTestResultsResponse.yml
+  x-codeSamples:
+    - lang: 'cURL'
+      label: 'CLI'
+      source: |
+        curl --request POST \
+          --header "Content-Type: application/json" \
+          --data '{
+            "api_key": "[生成したAPIキー]"
+            "auto_test_suite_external_key": "sample"
+            "auto_test_cycle_name": "2024-07-03",
+            "auto_test_results": [
+              {
+                "auto_test_case_external_key": "auto_sample1",
+                "result": "pass",
+                "execution_time_taken": 100,
+                "remark": "sample_test1"
+              },
+              {
+                "auto_test_case_external_key": "auto_sample2",
+                "result": "fail",
+                "execution_time_taken": 100,
+                "remark": "sample_test2"
+              }
+            ]
+          }' \
+          "https://cloud.veriserve.co.jp/api/v2/auto_test_suites"
