--- a/spec/components/schemas/TestCaseCreateResponse.yml
+++ b/spec/components/schemas/TestCaseCreateResponse.yml
@@ -4,10 +4,21 @@ properties:
     type: integer
   test_suite_version_id:
     type: integer
-  'no':
+  no:
     type: integer
   priority:
     type: string
+    enum: 
+      - A
+      - B
+      - C
+      - D
+      - E
+      - F
+      - G
+      - H
+      - I
+      - J
   category1:
     type: string
   category2:
