--- a/spec/components/schemas/TestResults.yml
+++ b/spec/components/schemas/TestResults.yml
@@ -7,12 +7,28 @@ properties:
         type: integer
       status:
         type: string
+        enum:
+          - unexecuted
+          - in_progress
+          - waiting_for_review
+          - complete
       name:
         type: string
       target_priorities:
         type: array
         items:
           type: string
+          enum: 
+            - A
+            - B
+            - C
+            - D
+            - E
+            - F
+            - G
+            - H
+            - I
+            - J
       target_results:
         type: array
         items:
@@ -226,6 +242,14 @@ properties:
           type: integer
         result:
           type: string
+          enum: 
+            - pass
+            - fail
+            - skip
+            - cut
+            - block
+            - na
+            - qa
         result_supplement:
           type: integer
         executed_at:
