--- a/spec/components/schemas/MultiTestResultsUpdateRequest.yml
+++ b/spec/components/schemas/MultiTestResultsUpdateRequest.yml
@@ -7,11 +7,26 @@ properties:
       properties: 
         result:
           type: integer
+          enum: 
+            - 1
+            - 2
+            - 3
+            - 4
+            - 5
+            - 6
+            - 7
           description: |
-            テスト結果<br>
-            例）
-            - PASS = 1
-            - FAIL = 2
+            テスト結果
+  
+            |Enum Value|Description|
+            |:--:|:--|
+            |1|PASS|
+            |2|FAIL|
+            |3|SKIP|
+            |4|CUT|
+            |5|BLOCK|
+            |6|N/A|
+            |7|Q&A|
         user_id:
           type: integer
           description: テスト実施者のユーザID（[GET]ユーザ情報の取得 のid）
