--- a/spec/components/schemas/TestCaseCreateRequest.yml
+++ b/spec/components/schemas/TestCaseCreateRequest.yml
@@ -8,7 +8,21 @@ properties:
         description: テストケース識別ID
       priority:
         type: integer
-        description: テストケースの優先度 例）A＝1 ～ J＝10
+        enum: 
+          - 1
+          - 2
+          - 3
+          - 4
+          - 5
+          - 6
+          - 7
+          - 8
+          - 9
+          - 10
+        description: |
+          テストケースの優先度 
+          
+          例）A=1 ～ J=10
       category1:
         type: string
         description: テスト定義項目1の内容
