--- a/spec/components/schemas/TestCases.yml
+++ b/spec/components/schemas/TestCases.yml
@@ -9,10 +9,21 @@ properties:
           type: integer
         test_suite_version_id:
           type: integer
-        'no':
+        no:
           type: integer
         priority:
-          type: integer
+          type: string
+          enum: 
+            - A
+            - B
+            - C
+            - D
+            - E
+            - F
+            - G
+            - H
+            - I
+            - J
         category1:
           type: string
         category2:
