--- a/spec/components/schemas/TestResultUpdateResponse.yml
+++ b/spec/components/schemas/TestResultUpdateResponse.yml
@@ -23,6 +23,14 @@ properties:
     type: integer
   result:
     type: string
+    enum: 
+      - pass
+      - fail
+      - skip
+      - cut
+      - block
+      - na
+      - qa
   result_supplement:
     type: integer
   executed_at:
