--- a/spec/components/schemas/TestSuiteVersionCreateResponse.yml
+++ b/spec/components/schemas/TestSuiteVersionCreateResponse.yml
@@ -8,6 +8,11 @@ properties:
     type: string
   status:
     type: string
+    enum: 
+      - draft
+      - available
+      - unavailable
+      - waiting_for_review
   user:
     type: object
     properties:
