--- a/spec/paths/test_suites_{test_suite[id]}.yml
+++ b/spec/paths/test_suites_{test_suite[id]}.yml
@@ -7,10 +7,10 @@ patch:
     テストスイートの情報を更新します。
 
 
-    テストスイート名（”test_suite[name]”）を更新する場合、値が入力されないリクエストはエラーが返ります。
+    テストスイート名（test_suite["name"]）を更新する場合、値が入力されないリクエストはエラーが返ります。
 
 
-    テスト定義項目ラベル（“test_suite[label_category]”）、テスト結果ラベル（“test_suite[label_content1]”）の上限はお申込内容に応じて異なります。
+    テスト定義項目ラベル（test_suite["label_category"]）、テスト結果ラベル（test_suite["label_content1"]）の上限はお申込内容に応じて異なります。
   parameters:
     - $ref: ../components/parameters/test_suite_id.yml
     - $ref: ../components/parameters/api_key.yml
