--- a/spec/paths/test_suites_{test_suite[id]}_test_suite_versions.yml
+++ b/spec/paths/test_suites_{test_suite[id]}_test_suite_versions.yml
@@ -31,10 +31,10 @@ post:
     テストスイートバージョンを作成します。
 
 
-    テストスイートバージョン名（test_suite_version[name]）の値がない場合、エラーが返ります。
+    テストスイートバージョン名（test_suite_version["name"]）の値がない場合、エラーが返ります。
 
 
-    テスト定義項目ラベル（test_suite_version[label_category1]）、テスト結果ラベル（test_suite_version[label_content1]）の上限はお申込内容に応じて異なります。
+    テスト定義項目ラベル（test_suite_version["label_category1"]）、テスト結果ラベル（test_suite_version["label_content1"]）の上限はお申込内容に応じて異なります。
   parameters:
     - $ref: ../components/parameters/test_suite_id.yml
     - $ref: ../components/parameters/api_key.yml
