--- a/spec/paths/test_suites_{test_suite[id]}_test_suite_versions_{test_suite_version[id]}_test_cases_{test_case[id]}.yml
+++ b/spec/paths/test_suites_{test_suite[id]}_test_suite_versions_{test_suite_version[id]}_test_cases_{test_case[id]}.yml
@@ -7,7 +7,7 @@ patch:
     任意のテストスイート内のテストケースの情報を更新します。
 
     必須項目の値が不正な場合はエラーが返ります。<br>
-    テスト定義項目（test_case[category]）の上限はお申込内容に応じて異なります(通常25、最大150まで)。
+    テスト定義項目（test_case["category"]）の上限はお申込内容に応じて異なります(通常25、最大150まで)。
   parameters:
     - $ref: ../components/parameters/test_suite_id.yml
     - $ref: ../components/parameters/test_suite_version_id.yml
