--- a/spec/components/responses/getTestPhasesResponse.yml
+++ b/spec/components/responses/getTestPhasesResponse.yml
@@ -9,9 +9,8 @@ content:
           test_phases:
             - id: 54384
               name: test_phase_100
-              start_on: '2020-02-26'
-              end_on: '2020-02-26'
-              redmine_issues_url: null
+              start_on: "2020-02-26"
+              end_on: "2020-02-26"
               test_suite_assignments:
                 - id: 67418
                   test_phase_id: 54384
@@ -19,8 +18,8 @@ content:
                   test_suite_name: test_suite_16
                   test_suite_version_name: test_suite_version_55
               archived: false
-              created_at: '2020-02-27T14:28:59.174+09:00'
-              updated_at: '2020-02-27T14:28:59.174+09:00'
+              created_at: "2020-02-27T14:28:59.174+09:00"
+              updated_at: "2020-02-27T14:28:59.174+09:00"
       テストフェーズ数が一定数以下の場合:
         value:
           test_phases:
