--- a/spec/components/responses/postTestPhaseResponse.yml
+++ b/spec/components/responses/postTestPhaseResponse.yml
@@ -7,8 +7,9 @@ content:
       id: 54628
       project_id: 77591
       name: test_phase_344
-      start_on: '2020-02-26'
-      end_on: '2020-02-29'
+      start_on: "2020-02-26"
+      end_on: "2020-02-29"
+      redmine_new_issue_url: null
       redmine_issues_url: null
       test_suite_assignments:
         - id: 67906
@@ -22,5 +23,5 @@ content:
           test_suite_name: test_suite_18
           test_suite_version_name: test_suite_version_66
       archived: false
-      created_at: '2020-02-27T14:28:59.174+09:00'
-      updated_at: '2020-02-27T14:28:59.174+09:00'
+      created_at: "2020-02-27T14:28:59.174+09:00"
+      updated_at: "2020-02-27T14:28:59.174+09:00"
