--- a/spec/components/schemas/TestPhaseCreateResponse.yml
+++ b/spec/components/schemas/TestPhaseCreateResponse.yml
@@ -12,6 +12,8 @@ properties:
   end_on:
     type: string
     format: date-time
+  redmine_new_issue_url:
+    type: string
   redmine_issues_url:
     type: string
   test_suite_assignments:
